Add Dev Mode via application.properties